HIVE-2080. Few code improvements in the ql and serde packages (Chinna Rao Lalam via cws)
git-svn-id: https://svn.apache.org/repos/asf/hive/trunk@1152338 13f79535-47bb-0310-9956-ffa450edef68